Creacion de  paquete Utilidades

--- a/src/proyectosimulacion/controladores/Fase1.form
+++ b/src/proyectosimulacion/controladores/Fase1.form
@@ -67,6 +67,9 @@
           </Border>
         </Property>
       </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Formulario FASE 2"/>
+      </AccessibilityProperties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
         <Property name="columns" type="int" value="0"/>
