--- a/src/proyectosimulacion/controladores/AllTables.form
+++ b/src/proyectosimulacion/controladores/AllTables.form
@@ -120,9 +120,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="lblNumClientesF1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="lblNumClientesF3" alignment="0" max="32767" attributes="0"/>
+                      <Component id="lblNumClientesF2" alignment="1" max="32767" attributes="0"/>
+                      <Component id="lblNumClientesF4" alignment="0" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -130,25 +134,21 @@
                           </Group>
                           <EmptySpace min="0" pref="44" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="lblNumClientesF1" alignment="0" max="32767" attributes="0"/>
-                      <Component id="lblNumClientesF3" alignment="0" max="32767" attributes="0"/>
-                      <Component id="lblNumClientesF2" max="32767" attributes="0"/>
-                      <Component id="lblNumClientesF4" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="Animacion" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="387" max="-2" attributes="0"/>
-                          <Component id="btnExportarExcel" min="-2" pref="130" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
                           <Component id="jScrollPane2" alignment="1" min="-2" pref="594" max="-2" attributes="0"/>
                           <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jScrollPane1" pref="594" max="32767" attributes="0"/>
                               <Component id="jScrollPane3" max="32767" attributes="0"/>
                               <Component id="jScrollPane4" alignment="1" max="32767" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="Animacion" min="-2" pref="117" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="323" max="-2" attributes="0"/>
+                          <Component id="btnExportarExcel" min="-2" pref="167" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
@@ -291,7 +291,7 @@
         </Container>
         <Component class="javax.swing.JButton" name="btnExportarExcel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="EXPORTAR XLS"/>
+            <Property name="text" type="java.lang.String" value="EXPORTAR EXCEL"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExportarExcelActionPerformed"/>
