--- a/src/proyectosimulacion/controladores/AllTables.form
+++ b/src/proyectosimulacion/controladores/AllTables.form
@@ -121,7 +121,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lblNumClientesF1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="lblNumClientesF1" alignment="1" max="32767" attributes="0"/>
+                      <Component id="lblReprueban" alignment="1" max="32767" attributes="0"/>
                       <Component id="lblNumClientesF3" alignment="0" max="32767" attributes="0"/>
                       <Component id="lblNumClientesF2" alignment="1" max="32767" attributes="0"/>
                       <Component id="lblNumClientesF4" alignment="0" max="32767" attributes="0"/>
@@ -134,6 +135,7 @@
                           </Group>
                           <EmptySpace min="0" pref="48" max="32767" attributes="0"/>
                       </Group>
+                      <Component id="lblAbandonan" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -170,6 +172,8 @@
                           <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblNumClientesF1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="lblAbandonan" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -188,6 +192,8 @@
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblNumClientesF3" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="lblReprueban" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
@@ -373,6 +379,16 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="lblAbandonan">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="--"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblReprueban">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="--"/>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
