--- a/src/proyectosimulacion/controladores/AllTables.form
+++ b/src/proyectosimulacion/controladores/AllTables.form
@@ -149,7 +149,9 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="Animacion" min="-2" pref="117" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="323" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
+                          <Component id="btnExportarPdf" min="-2" pref="167" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                           <Component id="btnExportarExcel" min="-2" pref="167" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -207,7 +209,10 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnExportarExcel" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnExportarExcel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnExportarPdf" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <Component id="Animacion" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -388,6 +393,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="--"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnExportarPdf">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="EXPORTAR PDF"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExportarPdfActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
