--- a/src/proyectosimulacion/controladores/AllTables.form
+++ b/src/proyectosimulacion/controladores/AllTables.form
@@ -126,6 +126,7 @@
                       <Component id="lblNumClientesF3" alignment="0" max="32767" attributes="0"/>
                       <Component id="lblNumClientesF2" alignment="1" max="32767" attributes="0"/>
                       <Component id="lblNumClientesF4" alignment="0" max="32767" attributes="0"/>
+                      <Component id="lblAbandonan" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -135,7 +136,7 @@
                           </Group>
                           <EmptySpace min="0" pref="48" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="lblAbandonan" max="32767" attributes="0"/>
+                      <Component id="lblDuplicado" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -149,9 +150,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="Animacion" min="-2" pref="117" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
-                          <Component id="btnExportarPdf" min="-2" pref="167" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="323" max="-2" attributes="0"/>
                           <Component id="btnExportarExcel" min="-2" pref="167" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -185,6 +184,8 @@
                           <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblNumClientesF2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="lblDuplicado" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -209,10 +210,7 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btnExportarExcel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnExportarPdf" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="btnExportarExcel" min="-2" max="-2" attributes="0"/>
                       <Component id="Animacion" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -394,13 +392,10 @@
             <Property name="text" type="java.lang.String" value="--"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="btnExportarPdf">
+        <Component class="javax.swing.JLabel" name="lblDuplicado">
           <Properties>
-            <Property name="text" type="java.lang.String" value="EXPORTAR PDF"/>
+            <Property name="text" type="java.lang.String" value="--"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExportarPdfActionPerformed"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
